fix alignment

--- a/frontend/pages/SoftwarePage/SoftwareTitles/SoftwareTable/_styles.scss
+++ b/frontend/pages/SoftwarePage/SoftwareTitles/SoftwareTable/_styles.scss
@@ -153,4 +153,10 @@
       overflow-x: auto;
     }
   }
+  .view-all-hosts {
+    &__cell {
+      display: flex;
+      justify-content: flex-end;
+    }
+  }
 }
